[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'


[project]
name = "abdm-python-integrator"
description = "A Django app that implements ABDM milestones"
readme = "README.md"
keywords = [
    "abdm"
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers"
]
requires-python = ">=3.8"
dependencies = [
    "django >= 3.2",
    "djangorestframework >= 3.12"
]
dynamic = ["version"]


[project.optional-dependencies]
code-quality = ["flake8", "flake8-isort"]


# ==== isort ====
[tool.isort]
line_length = 115
known_first_party = [
    "abdm-python-integrator",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]
multi_line_output=3
include_trailing_comma=true
